[package]
authors = ["Stephen Weeks <tene@allalone.org>"]
edition = "2018"
name = "glow"
readme = "README.md"
version = "0.1.0"

[[bin]]
bench = false
name = "glow"
test = false

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.9"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.2"
embedded-hal = "0.2.3"
apa102-spi = "0.2.0"
smart-leds = "0.2.0"
heapless = "0.5.0"
ssd1306 = "0.2.6"
embedded-graphics = "0.4.9"
libm = "0.1.4"

[dependencies.cortex-m-rtfm]
features = ["timer-queue"]
version = "0.4.3"

[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.7.1"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt"]
version = "0.3.0"

[dependencies.num-rational]
version = "0.2.2"
default-features = false

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile]
[profile.release]
codegen-units = 1
debug = true
# GDB segfaults when loading this
#lto = true
